[CHORE] Added simple counter

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simple-counter",
-  "homepage": "https://daxz1.github.io/react-simple-counter",
+  "homepage": "https://daxz1.github.io/react-simple-counter/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
